--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:EasyTiler"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800" Icon="/m_blindxfish_minimalistic_icon_squares_3_squares_02150e8d-f490-4f02-8f42-d67456605edb.png">
     <Grid Background="#FFF5F8FF">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="187*"/>
@@ -24,7 +24,7 @@
         </DockPanel>
         <Button Content="Insert Picture" HorizontalAlignment="Left" Height="20" Margin="10,15,0,0" VerticalAlignment="Top" Width="83" Click="Button_Click"/>
         <Button HorizontalAlignment="Left" Height="20" Margin="98,15,0,0" VerticalAlignment="Top" Width="36" Content="Select" Click="Button_Click_1"/>
-        <Button Content="Save Selection" HorizontalAlignment="Left" Margin="10,0,0,5" VerticalAlignment="Bottom" RenderTransformOrigin="0,1"/>
+        <Button Content="Save Selection" HorizontalAlignment="Left" Margin="10,0,0,5" VerticalAlignment="Bottom" RenderTransformOrigin="0,1" Click="Button_Click_2"/>
         <Button Content="Save Grid" HorizontalAlignment="Left" Margin="10,0,0,5" VerticalAlignment="Bottom" Grid.Column="1"/>
         <Canvas x:Name="ImageCanvas" Margin="10,46,10,40" MouseDown="ImageCanvas_MouseDown" MouseMove="ImageCanvas_MouseMove" MouseUp="ImageCanvas_MouseUp">
             <Canvas.Background>
