--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:EasyTiler"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800" Icon="/m_blindxfish_minimalistic_icon_squares_3_squares_02150e8d-f490-4f02-8f42-d67456605edb.png">
+        Title="EasyTiler" Height="450" Width="800" Icon="/m_blindxfish_minimalistic_icon_squares_3_squares_02150e8d-f490-4f02-8f42-d67456605edb.png">
     <Grid Margin="0,0,-419,-261" Background="#FFF5F8FF">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="187*"/>
